# PotatoEngine

./: CMakeLists.txt  README.md
src/: CaptureEngine.cpp  DisplayEngine.cpp  UpscaleEngine.cu  main.cpp
